--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -231,6 +231,10 @@
 					RelativePath=".\src\Common\PacketCreator.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\src\Common\PingPacket.cpp"
+					>
+				</File>
 				<Filter
 					Name="ServerToServer"
 					>
@@ -379,6 +383,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\PacketCreator.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\PingPacket.h"
 					>
 				</File>
 				<Filter
