--- a/conf/loginserver.lua.sample
+++ b/conf/loginserver.lua.sample
@@ -6,3 +6,6 @@ port = 8484;
 
 -- What port should the login server accept inter-server connection?
 inter_port = 8485;
+
+-- How many invalid login should the server handles before disconnecting the player? (0 to turn off this feature)
+invalid_login_threshold = 5;
