Added Recv and Send header to Common project
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@404 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -314,6 +314,14 @@
 						RelativePath=".\src\Common\InterHeader.h"
 						>
 					</File>
+					<File
+						RelativePath=".\src\Common\RecvHeader.h"
+						>
+					</File>
+					<File
+						RelativePath=".\src\Common\SendHeader.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="ServerToServer"
