Major reactor update - Added lua scripting for reactors
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@429 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -214,6 +214,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\LuaReactor.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Maps.cpp"
 					>
 				</File>
@@ -385,6 +389,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\LuaNPC.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\LuaReactor.h"
 					>
 				</File>
 				<File
