Re-organized lua scripting, LuaPortal and LuaNPC is now based on LuaScriptable
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@445 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -214,7 +214,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\LuaPortal.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\LuaReactor.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\LuaScriptable.cpp"
 					>
 				</File>
 				<File
@@ -392,7 +400,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\LuaPortal.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\LuaReactor.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\LuaScriptable.h"
 					>
 				</File>
 				<File
