Initial implementation of ReadPacket
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@494 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -230,6 +230,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\ReadPacket.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Selector.cpp"
 					>
 				</File>
@@ -369,6 +373,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\PacketHandler.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\ReadPacket.h"
 					>
 				</File>
 				<File
