--- a/Common.vcproj
+++ b/Common.vcproj
@@ -210,6 +210,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\StringUtilities.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\TimeUtilities.cpp"
 					>
 				</File>
@@ -353,6 +357,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\sha1.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\StringUtilities.h"
 					>
 				</File>
 				<File
