Fixed mobs spawned through spawnMobPos control not getting assigned to a player. (fixes boss don't attack, boss don't die)Added LoopingId which keeps track of a number between min and max, and loop back to min when the number reaches max
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@513 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -352,6 +352,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\LoopingId.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Randomizer.h"
 					>
 				</File>
