Move Pos struct to Pos.h with an overloaded operator "-" to replace distPos and getDistance.
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@517 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -432,6 +432,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Structs"
+				>
+				<File
+					RelativePath=".\src\Common\Pos.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
