Changed the way KeyMaps are saved and loaded.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@525 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -206,6 +206,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\KeyMaps.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Levels.cpp"
 					>
 				</File>
@@ -389,6 +393,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Inventory.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\KeyMaps.h"
 					>
 				</File>
 				<File
