Moved atob within InitializeChannel into MiscUtilities
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@650 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -340,6 +340,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\MiscUtilities.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Randomizer.h"
 					>
 				</File>
