Basic party operations (excludes chat, buff and exp share) (patch by KilledWhale)
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@665 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -242,6 +242,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\Party.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Player.cpp"
 					>
 				</File>
@@ -433,6 +437,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\NPCsScripts.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Party.h"
 					>
 				</File>
 				<File
