Buddy list database (_Database only_, client interface not implemented)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@671 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -186,6 +186,10 @@
 				Name="ChannelServer"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\BuddyList.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\ChannelServer.cpp"
 					>
 				</File>
@@ -379,6 +383,10 @@
 			<Filter
 				Name="ChannelServer"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\BuddyList.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\ChannelServer.h"
 					>
