Added files for upcoming DataProvider(not yet implemented).
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@674 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -354,6 +354,10 @@
 				Name="DataBaseLoading"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\DataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\InitializeChannel.cpp"
 					>
 				</File>
@@ -555,6 +559,10 @@
 			<Filter
 				Name="DataBaseLoading"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\DataProvider.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\InitializeChannel.h"
 					>
