--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -119,7 +119,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Common;src/Common/mysql;C:/Program Files/boost/boost_1_35_0/"
+				AdditionalIncludeDirectories="src/Common;src/Common/mysql;%ProgramFiles%/boost/boost_1_35_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
