--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -274,6 +274,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\SkillMacros.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Skills.cpp"
 					>
 				</File>
@@ -477,6 +481,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Shops.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\SkillMacros.h"
 					>
 				</File>
 				<File
