Improved rate setting system
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@824 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -424,6 +424,10 @@
 				Name="ServerToServer"
 				>
 				<File
+					RelativePath=".\src\Common\Rates.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\ServerPlayer.h"
 					>
 				</File>
