Moved PlayerSkills to its own file
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@845 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -262,6 +262,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerSkills.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Quests.cpp"
 					>
 				</File>
@@ -461,6 +465,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Players.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerSkills.h"
 					>
 				</File>
 				<File
